@@ -20,26 +20,38 @@ import static com.lasindu.clothfy_store.config.security.user.Permission.*;
 @Getter
 @RequiredArgsConstructor
 public enum Role {
-    USER(Collections.emptySet()),
+//    USER(Collections.emptySet()),
+    USER(
+            Set.of(
+            USER_READ,
+            USER_UPDATE,
+            USER_DELETE,
+            USER_CREATE
+            )),
     ADMIN(
             Set.of(
             ADMIN_READ,
             ADMIN_UPDATE,
             ADMIN_DELETE,
             ADMIN_CREATE,
-            MANAGER_READ,
-            MANAGER_UPDATE,
-            MANAGER_DELETE,
-            MANAGER_CREATE
+            USER_READ,
+            USER_UPDATE,
+            USER_DELETE,
+            USER_CREATE
+//            ADMIN_CREATE,
+//            MANAGER_READ,
+//            MANAGER_UPDATE,
+//            MANAGER_DELETE,
+//            MANAGER_CREATE
             )
-  ),
-    MANAGER(
-            Set.of(
-            MANAGER_READ,
-            MANAGER_UPDATE,
-            MANAGER_DELETE,
-            MANAGER_CREATE
-            )
+//  ),
+//    MANAGER(
+//            Set.of(
+//            MANAGER_READ,
+//            MANAGER_UPDATE,
+//            MANAGER_DELETE,
+//            MANAGER_CREATE
+//            )
   );
 
     @Getter
